--- a/templates/index.html
+++ b/templates/index.html
@@ -1,64 +1,58 @@
 {% extends 'base.html' %}
 
-{% block title %}Search{% endblock %}
+{% block title %}Post{% endblock %}
 
 {% block style %}
     <style>
+        .container-background {
+            position: relative;
+            background-image: url("{{ post.image }}");
+            background-size: cover;
+            background-position: center;
+            height: 50vh; /* Make the container cover the entire viewport height */
+        }
+        .content-overlay {
+            text-align: start; /* Center-align the content */
+            padding: 2rem; /* Add padding to the content */
+        }
     </style>
 {% endblock %}
 
+
 {% block content %}
 
-
     <!-- Main Content -->
-
-    <div class="container mt-3">
-        
-        <div class="row justify-content-center">
-
-            {% if not news: %}
-
-                <div class="container">
-                    <div class="p-2 text-center rounded-3">
-
-                        <h1 class="text-body-emphasis">Your search did not match any news.</h1>
-
-                        <ul class="col-lg-8 list-unstyled  mb-4 fs-7 mx-auto ">
-                            <li>Make sure that all words are spelled correctly.</li>
-                            <li>Try different keywords.</li>
-                            <li>Try more general keywords.</li>
-                            <li>Try fewer keywords.</li>
-                        </ul>
-                        
-                        <br><br><br><br><br><br><br><br><br>
-                        <br><br><br><br><br><br><br><br><br>
-
-                    </div>
-                </div>
-            
-            {% else: %}
-                {% for post in news: %}
-                    {% if post.title != "[Removed]" %}
-                    <div class="col m-1">
-                        <div class="card shadow-sm " style="width: 18rem;">
-                            <img src="{{ post.image }}" class="card-img-top img-fluid" alt="{{ post.title }}">
-                            <div class="card-body">
-                                <h5 class="card-title">{{ post.title }}</h5>
-                                <div class="d-flex justify-content-between align-items-center">
-                                    <a href="{{ url_for('show_post', index=post.id) }}" role="button" class="btn btn-sm btn-outline-info text-dark mt-1">View</a>
-                                    <small class="text-body-secondary mt-1">{{ post.date }} / {{ post.time }}</small>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    {% endif %}
-                {% endfor %}
-            {% endif %}
-
-
-        </div>
-
+    <div class="container-fluid container-background"></div>
+    <div class="content-overlay">
+        <h1 class="display-4 fst-italic">{{ post.title }}</h1>
+        <p class="lead my-3">{{ post.description }}</p>
+        <p class="lead mb-0">by {{ post.author }}, {{ post.source }}</p>
+        <p class="lead mb-0">{{ post.date }}, {{ post.time }}</p>
+        <br>
+        <p class="lead mb-0"><a href="{{ post.url }}" class="text-body-secondary fw-bold">Continue reading...</a></p>
     </div>
 
-
 {% endblock %}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
